microshift-manifests/0000_50_olm_00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-operator-lifecycle-manager
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: "v1.30"
    openshift.io/scc: ""
    openshift.io/cluster-monitoring: "true"
  annotations:
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-operators
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: "v1.30"
    openshift.io/scc: ""
  annotations:
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
