microshift-manifests/0000_50_olm_06-psm-operator.deployment.ibm-cloud-managed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: package-server-manager
  namespace: openshift-operator-lifecycle-manager
  labels:
    app: package-server-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: package-server-manager
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
        kubectl.kubernetes.io/default-container: package-server-manager
      labels:
        app: package-server-manager
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      priorityClassName: "system-cluster-critical"
      containers:
        - name: package-server-manager
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          command:
            - /bin/psm
            - start
          args:
            - --name
            - $(PACKAGESERVER_NAME)
            - --namespace
            - $(PACKAGESERVER_NAMESPACE)
            - --tls-cert
            - /etc/tls/private/tls.crt
            - --tls-key
            - /etc/tls/private/tls.key
            - --client-ca
            - /etc/tls/private/tls.crt
            - --custom-schemas
            - io.openshift.operators.lifecycles.v1alpha1
          image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          ports:
            - containerPort: 8443
              name: metrics
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 30
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - name: package-server-manager-serving-cert
              mountPath: "/etc/tls/private"
              readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 120
      volumes:
        - name: package-server-manager-serving-cert
          secret:
            secretName: package-server-manager-serving-cert
