microshift-manifests/0000_50_olm_07-olm-operator.deployment.ibm-cloud-managed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olm-operator
  namespace: openshift-operator-lifecycle-manager
  labels:
    app: olm-operator
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: olm-operator
  template:
    metadata:
      labels:
        app: olm-operator
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      volumes:
        - name: srv-cert
          secret:
            secretName: olm-operator-serving-cert
        - name: profile-collector-cert
          secret:
            secretName: pprof-cert
      containers:
        - name: olm-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: srv-cert
              mountPath: "/srv-cert"
              readOnly: true
            - name: profile-collector-cert
              mountPath: "/profile-collector-cert"
              readOnly: true
          command:
            - /bin/olm
          args:
            - --namespace
            - $(OPERATOR_NAMESPACE)
            - --writeStatusName
            - operator-lifecycle-manager
            - --writePackageServerStatusName
            - operator-lifecycle-manager-packageserver
            - --tls-cert
            - /srv-cert/tls.crt
            - --tls-key
            - /srv-cert/tls.key
            - --client-ca
            - /profile-collector-cert/tls.crt
            - --protectedCopiedCSVNamespaces
            - openshift
          image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
          terminationMessagePolicy: FallbackToLogsOnError
          resources:
            requests:
              cpu: 10m
              memory: 160Mi
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 120
      priorityClassName: system-cluster-critical
