microshift-manifests/0000_50_olm_07-olm-operator.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olm-operator
  namespace: openshift-operator-lifecycle-manager
  labels:
    app: olm-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: olm-operator
  template:
    metadata:
      labels:
        app: olm-operator
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      volumes:
        - name: srv-cert
          secret:
            secretName: olm-operator-serving-cert
        - name: profile-collector-cert
          secret:
            secretName: pprof-cert
        - name: tmpfs
          emptyDir: {}
        - name: olm-operator-serving-cert
          secret:
            secretName: olm-operator-serving-cert
        - name: extension-apiserver-authentication
          configMap:
            name: extension-apiserver-authentication
      containers:
        - name: olm-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: srv-cert
              mountPath: "/srv-cert"
              readOnly: true
            - name: profile-collector-cert
              mountPath: "/profile-collector-cert"
              readOnly: true
            - name: tmpfs
              mountPath: /tmp
          command:
            - /bin/olm
          args:
            - --namespace
            - $(OPERATOR_NAMESPACE)
            - --tls-cert
            - /srv-cert/tls.crt
            - --tls-key
            - /srv-cert/tls.key
            - --client-ca
            - /profile-collector-cert/tls.crt
            - --protectedCopiedCSVNamespaces
            - openshift
          image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9090
              scheme: HTTP
          terminationMessagePolicy: FallbackToLogsOnError
          resources:
            requests:
              cpu: 10m
              memory: 160Mi
        - name: kube-rbac-proxy
          image: quay.io/openshift/origin-kube-rbac-proxy:latest
          args:
            - --secure-listen-address=0.0.0.0:8443
            - --upstream=http://127.0.0.1:9090/
            - --tls-cert-file=/etc/tls/private/tls.crt
            - --tls-private-key-file=/etc/tls/private/tls.key
            - --client-ca-file=/etc/tls/client/client-ca-file
            - --logtostderr=true
          ports:
            - containerPort: 8443
              name: https-metrics
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - mountPath: /etc/tls/private
              name: olm-operator-serving-cert
            - mountPath: /etc/tls/client
              name: extension-apiserver-authentication
              readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
        node-role.kubernetes.io/master: ""
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 120
      priorityClassName: system-cluster-critical
