microshift-manifests/0000_50_olm_08-lifecycle-controller.deployment.ibm-cloud-managed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifecycle-controller
  namespace: openshift-operator-lifecycle-manager
  labels:
    app: olm-lifecycle-controller
  annotations:
    release.openshift.io/feature-set: "TechPreviewNoUpgrade"
    include.release.openshift.io/ibm-cloud-managed: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: olm-lifecycle-controller
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
        kubectl.kubernetes.io/default-container: lifecycle-controller
      labels:
        app: olm-lifecycle-controller
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: lifecycle-controller
      priorityClassName: "system-cluster-critical"
      containers:
        - name: lifecycle-controller
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          command:
            - /bin/lifecycle-controller
          args:
            - start
            - --catalog-source-field-selector=metadata.namespace=openshift-marketplace,metadata.name=redhat-operators
          image: quay.io/operator-framework/olm@sha256:de396b540b82219812061d0d753440d5655250c621c753ed1dc67d6154741607
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          ports:
            - containerPort: 8081
              name: health
          livenessProbe:
            httpGet:
              path: /healthz
              port: health
              scheme: HTTP
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: health
              scheme: HTTP
            initialDelaySeconds: 30
          terminationMessagePolicy: FallbackToLogsOnError
      nodeSelector:
        kubernetes.io/os: linux
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 120
