microshift-manifests/0000_50_olm_03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: olm-operator-metrics
  namespace: openshift-operator-lifecycle-manager
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: olm-operator-serving-cert
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
  labels:
    app: olm-operator
spec:
  type: ClusterIP
  ports:
    - name: https-metrics
      port: 8443
      protocol: TCP
      targetPort: 9443
  selector:
    app: olm-operator
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-operator-metrics
  namespace: openshift-operator-lifecycle-manager
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: catalog-operator-serving-cert
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
  labels:
    app: catalog-operator
spec:
  type: ClusterIP
  ports:
    - name: https-metrics
      port: 8443
      protocol: TCP
      targetPort: 9443
  selector:
    app: catalog-operator
