microshift-manifests/0000_50_olm_06-psm-operator.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: package-server-manager
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchLabels:
      app: package-server-manager
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
  policyTypes:
    - Ingress
    - Egress
